// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Render should render an H1 at fontSize90 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 2rem;
  line-height: 2.75rem;
  margin-bottom: 1.5rem;
  font-weight: 700;
  display: block;
}

<div
    class="emotion-1"
  >
    <h1
      class="emotion-0"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize90"
      font-weight="fontWeightBold"
    >
      This is an H1
    </h1>
  </div>
</DocumentFragment>
`;

exports[`Heading Render should render an H2 at fontSize70 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 1.5rem;
  line-height: 2rem;
  margin-bottom: 1.25rem;
  font-weight: 700;
  display: block;
}

<div
    class="emotion-1"
  >
    <h2
      class="emotion-0"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize70"
      font-weight="fontWeightBold"
    >
      This is an H2
    </h2>
  </div>
</DocumentFragment>
`;

exports[`Heading Render should render an H3 at fontSize60 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 1.25rem;
  line-height: 1.75rem;
  margin-bottom: 1rem;
  font-weight: 700;
  display: block;
}

<div
    class="emotion-1"
  >
    <h3
      class="emotion-0"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize60"
      font-weight="fontWeightBold"
    >
      This is an H3
    </h3>
  </div>
</DocumentFragment>
`;

exports[`Heading Render should render an H4 at fontSize40 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 1rem;
  line-height: 1.5rem;
  margin-bottom: 0.75rem;
  font-weight: 700;
  display: block;
}

<div
    class="emotion-1"
  >
    <h4
      class="emotion-0"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize40"
      font-weight="fontWeightBold"
    >
      This is an H4
    </h4>
  </div>
</DocumentFragment>
`;

exports[`Heading Render should render an H5 at fontSize30 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0.5rem;
  font-weight: 700;
  display: block;
}

<div
    class="emotion-1"
  >
    <h5
      class="emotion-0"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize30"
      font-weight="fontWeightBold"
    >
      This is an H5
    </h5>
  </div>
</DocumentFragment>
`;

exports[`Heading Render should render an H6 at fontSize20 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.75rem;
  line-height: 1.25rem;
  margin-bottom: 0.5rem;
  font-weight: 700;
  display: block;
}

<div
    class="emotion-1"
  >
    <h6
      class="emotion-0"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize20"
      font-weight="fontWeightBold"
    >
      This is an H6
    </h6>
  </div>
</DocumentFragment>
`;

exports[`Heading Render should render an italic H2 at fontSize50 1`] = `
<DocumentFragment>
  .emotion-1 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 1.5rem;
  line-height: 2rem;
  margin-bottom: 1.25rem;
  font-weight: 700;
  display: block;
}

<div
    class="emotion-1"
  >
    <h2
      class="emotion-0"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize70"
      font-weight="fontWeightBold"
    >
      <i>
        This is an italic H2
      </i>
    </h2>
  </div>
</DocumentFragment>
`;

exports[`Heading Render should render with no margin 1`] = `
<DocumentFragment>
  .emotion-6 {
  color: rgb(18,28,45);
  font-size: 0.875rem;
  font-family: 'Inter var experimental','Inter var',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 2rem;
  line-height: 2.75rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-1 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 1.5rem;
  line-height: 2rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 1.25rem;
  line-height: 1.75rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-3 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 1rem;
  line-height: 1.5rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-4 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  color: rgb(18,28,45);
  font-size: 0.75rem;
  line-height: 1.25rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

<div
    class="emotion-6"
  >
    <h2
      class="emotion-0"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize90"
      font-weight="fontWeightBold"
    >
      no margin heading
    </h2>
    <h2
      class="emotion-1"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize70"
      font-weight="fontWeightBold"
    >
      no margin heading
    </h2>
    <h2
      class="emotion-2"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize60"
      font-weight="fontWeightBold"
    >
      no margin heading
    </h2>
    <h2
      class="emotion-3"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize40"
      font-weight="fontWeightBold"
    >
      no margin heading
    </h2>
    <h2
      class="emotion-4"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize30"
      font-weight="fontWeightBold"
    >
      no margin heading
    </h2>
    <h2
      class="emotion-5"
      color="colorText"
      data-paste-element="HEADING"
      display="block"
      font-size="fontSize20"
      font-weight="fontWeightBold"
    >
      no margin heading
    </h2>
  </div>
</DocumentFragment>
`;
